objects/Product_Register__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <label>Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Register</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Arrival_Date_not_less_than_Production</fullName>
        <active>true</active>
        <description>Production Date should be less or equal to Arrival Date</description>
        <errorConditionFormula>Production_Date__c &gt; Arrival_Date__c</errorConditionFormula>
        <errorMessage>Production Date should be less or equal to Arrival Date</errorMessage>
    </validationRules>
</CustomObject>